--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@
 # For how it is generated, see `hack/generate-authors.sh`.
 
 Dorine Tipo <dorine.a.tipo@gmail.com>
-IamLam163 <104768490+IamLam163@users.noreply.github.com>
+IamLam163 <olamidealiyu@gmail.com>
